Make leather lighter, and prevent image overflows.

--- a/pychronia_common/static/MetalRadiance/scss/_zinnia_customization.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_zinnia_customization.scss
@@ -15,6 +15,10 @@
     margin-left: -30px;
     margin-right: -30px;
 
+    img {
+        max-width: 100%;
+    }
+
     img.center {
         margin-top: 15px;
         margin-bottom: 15px;
